--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div id="first-section" class="w-100 h-auto">
 			<nav class="navbar navbar-expand-lg nav-color px-5 mx-5 container">
 				<a class="navbar-brand " href="#">PROTFOLIO</a>
-					<button class="navbar-toggler  float-left " type="button" data-toggle="collapse" data-target="#navbarNav">
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
 						<span class="navbar-toggler-icon"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></span>
 					</button>
 				  <div class="collapse navbar-collapse " id="navbarNav" >
