--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="style.css" />
-<link rel="stylesheet" href="fonts/font.css" />
-<!--<link rel="stylesheet" href="css/bootstrap.min.css" class="" />-->
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="fonts/font.css" />
+	<!--<link rel="stylesheet" href="css/bootstrap.min.css" class="" />-->
 
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<title>This is a portfolio Website</title>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<title>This is a protfolio Website</title>
 </head>
-
 <body class="w-100 h-auto">
 	<section class="w-100 h-auto">
 		<div id="first-section" class="w-100 h-auto">
-			<nav class="navbar navbar-expand-lg nav-color px-5 mx-5 container">
+			<nav class="navbar navbar-expand-lg nav-color px-5 pt-2 mx-5 container">
 				<a class="navbar-brand " href="#">PROTFOLIO</a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
-						<span class="navbar-toggler-icon"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></span>
-					</button>
-				  <div class="collapse navbar-collapse " id="navbarNav" >
-					<ul class="navbar-nav ml-auto">
-					  <li class="nav-item active px-3">
-						<a class="nav-link" href="#">Home</a>
+					<div class="float-right  p-2 d-none" id="tog-btn" >
+						<span class="btn btn-mr mr-5 " id="bar-btn" onclick="openNav()"><i class="fa fa-bars white" aria-hidden="true"></i></span>
+						<div class="float-right" id="tog-btn2" >
+							<span class="btn btn-mr mr-5" id="btn-cross" onclick="removeNav()"><i class="fa fa-times white" aria-hidden="true"></i></span>
+						</div>
+					</div>
+				  <div class="ml-auto position-relative" id="menu" >
+					<ul class="d-inline-block">
+					  <li class="d-inline px-3">
+						<a class="bl-color" href="#">Home</a>
 					  </li>
-					  <li class="nav-item px-3">
-						<a class="nav-link" href="#">Work</a>
+					  <li class="d-inline px-3">
+						<a class="bl-color" href="#">Work</a>
 					  </li>
-					  <li class="nav-item px-3">
-						<a class="nav-link " href="#">Blog</a>
+					  <li class="d-inline px-3">
+						<a class="bl-color" href="#">Blog</a>
 					  </li>
-					  <li class="nav-item px-3" >
+					  <li class="d-inline px-3" >
 						<button class="btn btn-outline-primary ml-5 btn-radius" style="width:175px;height:55px;">Hire Me!</button>
 					  </li>
 					</ul>
@@ -43,7 +45,7 @@
 					<h1 class="">Expert in Graphic Design &Development </h1>
 					<p class="mt-4 h-auto w-75">Currently available for select projects,collaborations and consulting.Currently available for select projects, collaborations and consulting.
 					</p>
-					<button class="btn btn-primary btn-radius px-5 mt-4 b-btn">SEE MY WORK</button>
+					<button class="btn btn-primary btn-radius px-5 my-3 b-btn">SEE MY WORK</button>
 				</div>
 			</div>
 		</div>
@@ -196,7 +198,7 @@
 				<h3>Make It Awesome!</h3>
 				<p>There's nothing we wont try. Never heard the word impossible. This time there's no stopping us. The year is 1987 and NASA launches the last of Americas deep space probes.</p>
 			</div>
-			<div class="col-xl-4 col-sm-12 col-md-12 float-right mt-5">
+			<div class="col-xl-4 col-sm-12 col-md-12 float-right ">
 				<button class="btn btn-outline-primary my-5 ml-5 btn-radius" style="width:175px;height:55px;">Hire Me Now!</button>
 			</div>
 			<div class="clearfix"></div>
@@ -244,19 +246,19 @@
 			</div>
 		</div>
 	</section>
-	<section class="footer-section">
+	<div class="footer-section">
 		<div class="container row nav-color text-center  h-auto mx-auto" id="aaaa">
 			<ul class="col-xl-8 col-md-6 col-sm-6 col-12 d-inline f-ul f-color mb-0 pb-0 text-center"  style="height:100px;">
-					  <li class=" d-inline py-3 " id="aaaa">
+					  <li class=" d-inline py-3 " id="aaaa2">
 						<a class="f-color p-4 my-2" href="#">Home</a>
 					  </li>
-					  <li class=" d-inline py-3 mx-3" id="aaaa">
+					  <li class=" d-inline py-3 mx-3" id="aaaa3">
 						<a class="f-color p-4" href="#">Work</a>
 					  </li>
-					  <li class="d-inline py-3 mx-3" id="aaaa">
+					  <li class="d-inline py-3 mx-3" id="aaaa4">
 						<a class="f-color p-4" href="#">Blog</a>
 					  </li>
-					  <li class="d-inline py-3 mx-3" id="aaaa">
+					  <li class="d-inline py-3 mx-3" id="aaaa5">
 						<a class="f-color p-4" href="#">Hire Me</a>
 					  </li>
 			</ul>
@@ -304,11 +306,21 @@
 			</div>
 		</div>
 		<footer class="footer-design mt-5">
-		<p class="text-center fs-color mt-5">Copyright  2017. Portfolio By VictorThemes </p>
+		<p class="text-center fs-color mt-5">Copyright @ 2020. Portfolio By MD Rabiul Islam </p>
 		</footer>
-		
-	
-	</section>
+	</div>
+	<script>
+		function openNav() {
+		  document.getElementById("menu").style.height = "350px";
+		  document.getElementById("bar-btn").style.display = "none";
+		  document.getElementById("btn-cross").style.display = "block";
+		}		
+		function removeNav() {
+		  document.getElementById("menu").style.height = "0%";
+		  document.getElementById("bar-btn").style.display = "block";
+		  document.getElementById("btn-cross").style.display = "none";
+		}
+	</script>
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
